--- a/ive/ive.info.yml
+++ b/ive/ive.info.yml
@@ -1,23 +1,7 @@
-# This theme is marked as @internal. It is intended to evolve and change over
-# minor releases.
-# Change record https://www.drupal.org/node/2673014.
-# As the UI of Drupal improves between minor versions, the mark up and assets
-# in the ive theme will change. The ive theme is not backwards
-# compatible. If you wish to modify the output or assets of ive you can:
-# 1. Copy the whole of ive and rename it as your own theme. You will need to
-# manually manage your own updates if you want to stay up to date with ive's
-# bug fixes and feature support.
-#
-# 2. Sub-theme ive. This is only recommended if you want to make minor
-# tweaks and understand that ive could break your modifications as it
-# changes.
 name: ive
 type: theme
 base theme: classy
-description: 'A flexible, recolorable theme with many regions and a responsive, mobile-first layout.'
-package: Core
-# version: VERSION
-# core: 8.x
+description: 'My custom theme.'
 libraries:
   - ive/global-styling
 ckeditor_stylesheets:
@@ -46,8 +30,5 @@ regions:
   footer_fourth: 'Footer fourth'
   footer_fifth: 'Footer fifth'
 
-# Information added by Drupal.org packaging script on 2019-05-23
-version: '8.7.2'
+version: '1.0'
 core: '8.x'
-project: 'drupal'
-datestamp: 1558597129
