--- a/ive/ive.info.yml
+++ b/ive/ive.info.yml
@@ -4,6 +4,7 @@ base theme: classy
 description: 'My custom theme.'
 libraries:
   - ive/global-styling
+  - ive/ive
 ckeditor_stylesheets:
   - css/base/elements.css
   - css/components/captions.css
