--- a/ive/ive.info.yml
+++ b/ive/ive.info.yml
@@ -22,6 +22,7 @@ regions:
   content: Content
   sidebar_first: 'Sidebar first'
   sidebar_second: 'Sidebar second'
+  bottom_wide: 'Bottom wide'
   featured_bottom_first: 'Featured bottom first'
   featured_bottom_second: 'Featured bottom second'
   featured_bottom_third: 'Featured bottom third'
