new article-teaser.css and node--article--teaser.html.twig

--- a/ive/ive.libraries.yml
+++ b/ive/ive.libraries.yml
@@ -3,6 +3,11 @@ ive:
     theme:
       css/ive.css: {}
 
+article_teaser:
+  css:
+    layout:
+      css/article-teaser.css: {}
+
 global-styling:
   version: VERSION
   css:
